--- a/projects/HolaMundo/src/index.css
+++ b/projects/HolaMundo/src/index.css
@@ -6,3 +6,9 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
